--- a/css/preloader.css
+++ b/css/preloader.css
@@ -18,3 +18,10 @@
     z-index: 9999;
     background: url(https://j2n9a3i8.stackpathcdn.com/wp-content/uploads/2014/08/Preloader_11.gif) center no-repeat white;
 }
+
+
+.fas{
+    border:3px solid pink;
+    height: 3px;
+    width: 3px;
+}
